--- a/821b.EstrattoConto/customerstatement821b.jrxml
+++ b/821b.EstrattoConto/customerstatement821b.jrxml
@@ -145,10 +145,10 @@ l.postal_add,
 doc.docbasetype,
 p.description,
 0 as grandtotal,
-p.payamt as payamt,
+p.payamt*-1 as payamt,
 CASE WHEN sum(al.amount) IS NULL  THEN p.payamt
 ELSE
-p.payamt-sum (al.amount)
+p.payamt-sum (al.amount) 
 END 
 as AllocationAmt,
 0 as overunderAmt,
@@ -494,7 +494,10 @@ $V{grandtotal1}.add($V{allocationamt1})]]></variableExpression>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="34">
+			<band height="38">
+				<line>
+					<reportElement x="0" y="0" width="555" height="1" uuid="1b04e875-781e-4a93-aff0-2c2c7f336124"/>
+				</line>
 				<frame>
 					<reportElement x="250" y="5" width="304" height="29" uuid="d54eafa3-395b-42f1-aa83-7d514bfc1916">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.grid.JSSGridBagLayout"/>
@@ -639,7 +642,10 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 				<frame>
 					<reportElement positionType="Float" x="0" y="0" width="555" height="12" isRemoveLineWhenBlank="true" forecolor="#A30303" uuid="72b06c80-13c1-4365-af5c-6577e99d18b0"/>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0">
-						<bottomPen lineWidth="0.5"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
 						<reportElement key="textField" positionType="Float" x="238" y="0" width="180" height="12" forecolor="#A30303" uuid="fa04fc64-763b-4278-b262-f8548907f1de">
@@ -881,7 +887,10 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					<property name="ShowOutOfBoundContent" value="true"/>
 				</reportElement>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="0">
-					<bottomPen lineWidth="0.5"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField isStretchWithOverflow="true" pattern="dd-MM-yyyy" isBlankWhenNull="true">
 					<reportElement key="textField" positionType="Float" x="-2" y="0" width="60" height="12" forecolor="#2B05FF" uuid="69f8275c-3a01-416f-a02e-ca37417a1b3c">
@@ -900,7 +909,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					<textFieldExpression><![CDATA[$F{paymentdate}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement key="textField" positionType="Float" x="58" y="0" width="90" height="12" forecolor="#2B05FF" uuid="ffc9aa24-a555-4801-89ce-c845525e5dd7"/>
+					<reportElement key="textField" positionType="Float" x="58" y="0" width="100" height="12" forecolor="#2B05FF" uuid="ffc9aa24-a555-4801-89ce-c845525e5dd7"/>
 					<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 						<pen lineWidth="0.25"/>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -911,10 +920,10 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 					<textElement verticalAlignment="Middle">
 						<font fontName="SansSerif" size="8" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{paymentdoc}== null ? T("ABBIN./COMPENS.") : $F{name}==("prepaid") ?T("PAGAMENTO NON ALLOCATO") : $F{paymentdoc}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{paymentdoc}== null ? T("ABBIN./COMPENS."):$F{docbasetype}.equals("APP")?T("ANTICIPO FORNITORE"):$F{docbasetype}.equals("ARR")?T("ANTICIPO CLIENTE"):$F{paymentdoc}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="148" y="0" width="270" height="12" forecolor="#2B05FF" uuid="0294190b-9b9e-41b8-94ff-a954c0f29bb4">
+					<reportElement positionType="Float" x="158" y="0" width="260" height="12" forecolor="#2B05FF" uuid="0294190b-9b9e-41b8-94ff-a954c0f29bb4">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="e280b7e5-6ab4-4a67-b318-8e99c7579be5"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
@@ -923,7 +932,7 @@ $V{Pagamenti_2_g_Report} == null ? new BigDecimal(0) : $V{Variable_1_2_1}]]></te
 						<font fontName="SansSerif" size="7" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{paymentdoc}==null ? "RIF.: " + T($F{inv2_documentno})/*  +" " +T($F{name})*/:
-"DOC. PAG. "+T($F{paymentdoc})+" - " +T($F{paymentdescription})  + ' ' + T($F{bank_name}) /*+"\n"*/+" IMP. TOT. PAG. - "+ T(new java.text.DecimalFormat("€ #,##0.00").format($F{payamt})) /*" DEL" + (new SimpleDateFormat("dd/MM/yyyy").format($F{paymentdate}))*/]]></textFieldExpression>
+"DOC. PAG. "+T($F{paymentdoc})+" - " +T($F{paymentdescription})  + ' ' + T($F{bank_name}) /*+"\n"*/+" IMP. PAGATO: "+ T(new java.text.DecimalFormat("€ #,##0.00").format($F{payamt})) /*" DEL" + (new SimpleDateFormat("dd/MM/yyyy").format($F{paymentdate}))*/]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
 					<reportElement positionType="Float" x="418" y="0" width="73" height="12" forecolor="#2B05FF" uuid="16d376c0-ce90-44df-abc9-64c65473ffea">
